WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189861
FontDataCache should use Ref<Font> instead of a RefPtr<Font>
https://bugs.webkit.org/show_bug.cgi?id=189861
Summary
FontDataCache should use Ref<Font> instead of a RefPtr<Font>
Chris Dumez
Reported
2018-09-21 15:02:27 PDT
FontDataCache should use Ref<Font> instead of a RefPtr<Font>.
Attachments
Patch
(2.70 KB, patch)
2018-09-21 15:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-09-21 15:03:14 PDT
Created
attachment 350435
[details]
Patch
WebKit Commit Bot
Comment 2
2018-09-22 00:56:28 PDT
Comment on
attachment 350435
[details]
Patch Clearing flags on attachment: 350435 Committed
r236383
: <
https://trac.webkit.org/changeset/236383
>
WebKit Commit Bot
Comment 3
2018-09-22 00:56:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-09-22 00:57:23 PDT
<
rdar://problem/44702531
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug