FontDataCache should use Ref<Font> instead of a RefPtr<Font> https://bugs.webkit.org/show_bug.cgi?id=189861

Reviewed by Antti Koivisto.

* platform/graphics/FontCache.cpp:
(WebCore::FontCache::fontForPlatformData):
(WebCore::FontCache::purgeInactiveFontData):


Canonical link: https://commits.webkit.org/204836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236383 268f45cc-cd09-0410-ab3c-d52691b4dbfc